# turbobase64

./: .gitignore  MANIFEST.in  README.md  _build.py  appveyor.yml  pyproject.toml  setup.py  test.py
src/: turbob64.pyx
src/lib/: LICENSE
